Actcually fix body overflow for slanted container

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
     background-color: var(--embark-space1);
     color: var(--embark-astral1);
     font-family: 'IBM Plex Mono', 'monospace';
-    overflowX: hidden;
+    overflow-x: hidden;
 }
 
 a {
